libaudioverse-sys/pregenerated_bindings.rs

 
 pub fn Lav_createBuffer ( serverHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_bufferGetServer ( bufferHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_bufferLoadFromFile ( bufferHandle : LavHandle , path : * const :: std :: os :: raw :: c_char , ) -> LavError ; 
} extern "C" {
 pub fn Lav_bufferLoadFromArray ( bufferHandle : LavHandle , sr : :: std :: os :: raw :: c_int , channels : :: std :: os :: raw :: c_int , frames : :: std :: os :: raw :: c_int , data : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_bufferDecodeFromArray ( bufferHandle : LavHandle , data : * mut :: std :: os :: raw :: c_char , datalen : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_bufferNormalize ( bufferHandle : LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_bufferGetDuration ( bufferHandle : LavHandle , destination : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_bufferGetLengthInSamples ( bufferHandle : LavHandle , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetServer ( nodeHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeConnect ( nodeHandle : LavHandle , output : :: std :: os :: raw :: c_int , destHandle : LavHandle , input : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeConnectServer ( nodeHandle : LavHandle , output : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeConnectProperty ( nodeHandle : LavHandle , output : :: std :: os :: raw :: c_int , otherHandle : LavHandle , slot : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeDisconnect ( nodeHandle : LavHandle , output : :: std :: os :: raw :: c_int , otherHandle : LavHandle , input : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeIsolate ( nodeHandle : LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetInputConnectionCount ( nodeHandle : LavHandle , destination : * mut :: std :: os :: raw :: c_uint , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetOutputConnectionCount ( nodeHandle : LavHandle , destination : * mut :: std :: os :: raw :: c_uint , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeResetProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeSetIntProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , value : :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeSetFloatProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , value : f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeSetDoubleProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , value : f64 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeSetStringProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , value : * mut :: std :: os :: raw :: c_char , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeSetFloat3Property ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , v1 : f32 , v2 : f32 , v3 : f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeSetFloat6Property ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , v1 : f32 , v2 : f32 , v3 : f32 , v4 : f32 , v5 : f32 , v6 : f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetIntProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetFloatProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destination : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetDoubleProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destination : * mut f64 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetStringProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destination : * mut * const :: std :: os :: raw :: c_char , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetFloat3Property ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destination1 : * mut f32 , destination2 : * mut f32 , destination3 : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetFloat6Property ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destinationV1 : * mut f32 , destinationV2 : * mut f32 , destinationV3 : * mut f32 , destinationV4 : * mut f32 , destinationV5 : * mut f32 , destinationV6 : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetIntPropertyRange ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destinationMin : * mut :: std :: os :: raw :: c_int , destinationMax : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetFloatPropertyRange ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destinationMin : * mut f32 , destinationMax : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetDoublePropertyRange ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destinationMin : * mut f64 , destinationMax : * mut f64 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetPropertyName ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destination : * mut * mut :: std :: os :: raw :: c_char , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetPropertyType ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetPropertyHasDynamicRange ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeReplaceFloatArrayProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , length : :: std :: os :: raw :: c_uint , values : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeReadFloatArrayProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , index : :: std :: os :: raw :: c_uint , destination : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeWriteFloatArrayProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , start : :: std :: os :: raw :: c_uint , stop : :: std :: os :: raw :: c_uint , values : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetFloatArrayPropertyLength ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destination : * mut :: std :: os :: raw :: c_uint , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeReplaceIntArrayProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , length : :: std :: os :: raw :: c_uint , values : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeReadIntArrayProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , index : :: std :: os :: raw :: c_uint , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeWriteIntArrayProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , start : :: std :: os :: raw :: c_uint , stop : :: std :: os :: raw :: c_uint , values : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetIntArrayPropertyLength ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destination : * mut :: std :: os :: raw :: c_int , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetArrayPropertyLengthRange ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destinationMin : * mut :: std :: os :: raw :: c_uint , destinationMax : * mut :: std :: os :: raw :: c_uint , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeSetBufferProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , value : LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeGetBufferProperty ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_automationCancelAutomators ( nodeHandle : LavHandle , propertyIndex : :: std :: os :: raw :: c_int , time : f64 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_automationLinearRampToValue ( nodeHandle : LavHandle , slot : :: std :: os :: raw :: c_int , time : f64 , value : f64 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_automationSet ( nodeHandle : LavHandle , slot : :: std :: os :: raw :: c_int , time : f64 , value : f64 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_automationEnvelope ( nodeHandle : LavHandle , slot : :: std :: os :: raw :: c_int , time : f64 , duration : f64 , valuesLength : :: std :: os :: raw :: c_int , values : * mut f64 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_nodeReset ( nodeHandle : LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createSineNode ( serverHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createAdditiveSquareNode ( serverHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createAdditiveTriangleNode ( serverHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createAdditiveSawNode ( serverHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createNoiseNode ( serverHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createHrtfNode ( serverHandle : LavHandle , hrtfPath : * const :: std :: os :: raw :: c_char , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createHardLimiterNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createCrossfadingDelayNode ( serverHandle : LavHandle , maxDelay : f32 , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createDoppleringDelayNode ( serverHandle : LavHandle , maxDelay : f32 , channels : :: std :: os :: raw :: c_int , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createAmplitudePannerNode ( serverHandle : LavHandle , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_amplitudePannerNodeConfigureStandardMap ( nodeHandle : LavHandle , channels : :: std :: os :: raw :: c_uint , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createMultipannerNode ( serverHandle : LavHandle , hrtfPath : * mut :: std :: os :: raw :: c_char , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createPushNode ( serverHandle : LavHandle , sr : :: std :: os :: raw :: c_uint , channels : :: std :: os :: raw :: c_uint , destination : * mut LavHandle , ) -> LavError ; 
} extern "C" {
 pub fn Lav_pushNodeFeed ( nodeHandle : LavHandle , length : :: std :: os :: raw :: c_uint , frames : * mut f32 , ) -> LavError ; 
} extern "C" {
 pub fn Lav_pushNodeSetLowCallback ( nodeHandle : LavHandle , callback : LavParameterlessCallback , userdata : * mut :: std :: os :: raw :: c_void , ) -> LavError ; 
} extern "C" {
 pub fn Lav_pushNodeSetUnderrunCallback ( nodeHandle : LavHandle , callback : LavParameterlessCallback , userdata : * mut :: std :: os :: raw :: c_void , ) -> LavError ; 
} extern "C" {
 pub fn Lav_createBiquadNode ( serverHandle : LavHandle , channels : :: std :: os :: raw :: c_uint , destination : * mut LavHandle , ) -> LavError ; 
